Fix bug where total points and button bar weren't aligning.

--- a/stylesheets/xwing.css
+++ b/stylesheets/xwing.css
@@ -45,8 +45,8 @@ strong em, em strong {
 .show-on-print {
   display: none; }
 
-.nav-tabs > .active > a {
-  color: white !important; }
+.nav-pills {
+  border-bottom: thin solid darkgrey; }
 
 .ship-container > .row-fluid {
   padding: 10px 0px; }
